# Internship_USTC

./: .gitignore  Internship_USTC.code-workspace  NOTES.md  README.md  _commit_push.sh  pyproject.toml
Code/: USTC_Ubuntu.ipynb  divertorload.py  magneticmesh.py  optionalfeatures.py
Code/HSX_Test/: HSX_Equilibrium.py  HSX_boundary1.py  HSX_boundary2.py  HSX_boundary3.py  HSX_magnetictop_Pm.py  HSX_vessel_3cm.py  HSX_vessel_5cm.py  HSX_vessel_7cm.py  example_hsx.py
Code/Source_Codes/firefly/fortran/: CMakeLists.txt  geometry.f90  tasks.f90
Code/Source_Codes/firefly/python/: CMakeLists.txt
Code/Source_Codes/firefly/python/firefly/: __init__.py  pso.py
Code/Source_Codes/firefly/python/firefly/cli/: hload.py  rzview.py  status.py
Code/Source_Codes/firefly/python/firefly/f2py/: autowrap  geometry.f90  tasks.f90  version.f90
Code/Source_Codes/firefly/python/firefly/geometry/: CMakeLists.txt  __init__.py  _boundary_generator.py  plategen.py  valpha.py  vcasing.py
Code/Source_Codes/firefly/python/firefly/objectives/: __init__.py  heat_load.py
Code/Source_Codes/firefly/python/firefly/tasks/: CMakeLists.txt  __init__.py
Code/Source_Codes/flare/python/: CMakeLists.txt
Code/Source_Codes/flare/python/flare/: __init__.py  _f2py.py  auto_interface.sh  control.py  model.py  utils.py
Code/Source_Codes/flare/python/flare/analysis/: CMakeLists.txt  __init__.py  bfield.py  boundary.py  connection_length.py  equi2d.py  fieldline.py  fluxsurf2d.py  footprint.py  fourier_transform.py  invariant_manifold.py  poincare_map.py  rpath2d.py
Code/Source_Codes/flare/python/flare/bfield/: __init__.py  geqdsk.py  gpec.py  mgrid.py  vmec.py
Code/Source_Codes/flare/python/flare/cli/: equi2d_autoconf.py  equi3d_autoconf.py  find_resonances.py  footprint_parameters.py  geqdsk.py  mgen.py  poincare_plot.py  run.py
Code/Source_Codes/flare/python/flare/f2py/: analysis.f90  autowrap  cli.f90  control.f90  geqdsk.f90  kinds.f90  mmesh.f90  model.f90  tasks.f90  utils.f90  version.f90
Code/Source_Codes/flare/python/flare/mmesh/: __init__.py  inner_boundary.py  mmesh.py  n0_domain.py  unstructured.py  utils.py
Code/Source_Codes/flare/python/flare/tasks/: CMakeLists.txt  __init__.py
Code/Source_Codes/moose/fortran/: CMakeLists.txt  analysis.f90  data.f90  geometry.f90  grids.f90  workspaces.f90
Code/Source_Codes/moose/fortran/analysis/: CMakeLists.txt  linalg.f90  mfunc.f90  quantiles.f90  ufunc.f90
Code/Source_Codes/moose/fortran/analysis/mfuncs/: CMakeLists.txt  bspline2d.f90  bspline3d.f90  gradient_field.f90  mpoly.f90
Code/Source_Codes/moose/fortran/analysis/ufuncs/: CMakeLists.txt  bspline.f90  interp.f90  upoly.f90
Code/Source_Codes/moose/fortran/core/: CMakeLists.txt  algorithms.f90  aux.c  configparser.f90  dict.f90  error.f90  ilist.f90  kinds.f90  math.f90  mpi.f90  netcdf.f90  rlist.f90  table.f90  txtio.f90  txtio.h  units.f90  utils.f90
Code/Source_Codes/moose/fortran/core/math/: CMakeLists.txt  integral.f90
Code/Source_Codes/moose/fortran/core/math/_cmlib/: CMakeLists.txt  README  dbsplin.f90  dtensbs.f90  fftpkg.f90  machcon.f90  quadpkd.f90  xerror.f90
Code/Source_Codes/moose/fortran/core/utils/: CMakeLists.txt  checksum.f90  input.f90  path.f90  string.f90
Code/Source_Codes/moose/fortran/data/: CMakeLists.txt  dataset.f90  expression.f90  metadata.f90
Code/Source_Codes/moose/fortran/geometry/: CMakeLists.txt  contours.f90  curve.f90  hypermesh3d.f90  hypersurface.f90  polygon.f90  polygon2d.f90  quad.f90  surface.f90
Code/Source_Codes/moose/fortran/geometry/curves/: CMakeLists.txt  bspline.f90  crspline.f90  ellipse.f90  fourier.f90  interp.f90
Code/Source_Codes/moose/fortran/geometry/surfaces/: CMakeLists.txt  axisurf.f90  fourier.f90  interp.f90  rzplane.f90  torosurf.f90  trisurf.f90
Code/Source_Codes/moose/fortran/grids/: CMakeLists.txt  _readnc.f90  block_structured_grid.f90  cgrid.f90  cmesh.f90  grid.f90  mesh1d.f90  qmesh.f90  r3grid.f90  rmesh.f90  rmesh3d.f90  structured_grid.f90  tmesh.f90  tpzmesh.f90  tpzmesh3d.f90  ugrid.f90  uqmesh.f90
Code/Source_Codes/moose/fortran/workspaces/: CMakeLists.txt  bfit.f90  fieldline.f90  qmesh_generator.f90  uqwork.f90
Code/Source_Codes/moose/fortran/workspaces/odeivp/: CMakeLists.txt  driver.f90  stepper.f90  system.f90
Code/Source_Codes/moose/fortran/workspaces/odeivp/plugins/: CMakeLists.txt  _dlsode.f  lsode.f90  rk.f90
Code/Source_Codes/moose/python/: CMakeLists.txt
Code/Source_Codes/moose/python/moose/: __init__.py  _deferred.py  _numpy.py  mplot.py
Code/Source_Codes/moose/python/moose/analysis/: qfuncs.py
Code/Source_Codes/moose/python/moose/analysis/ufuncs/: __init__.py  _ufunc.py  bspline.py  interp.py  trigonom.py
Code/Source_Codes/moose/python/moose/core/: _assert.py  _tanhnorm.py  configparser.py  expression.py  input.py  math.py  netcdf.py  plot.py  txtio.py  units.py
Code/Source_Codes/moose/python/moose/data/: __init__.py  data.py  dataset.py  expression.py  metadata.py  parameter.py
Code/Source_Codes/moose/python/moose/f2py/: analysis.f90  geometry.f90  tools.f90  version.f90
Code/Source_Codes/moose/python/moose/geometry/: __init__.py  hypersurface.py  polygon.py  quad.py
Code/Source_Codes/moose/python/moose/geometry/curves/: __init__.py  _curve.py  bspline.py  fourier.py  interp.py
Code/Source_Codes/moose/python/moose/geometry/editors/: __init__.py  bspline_curve.py  interp_curve.py  polygon.py
Code/Source_Codes/moose/python/moose/geometry/surfaces/: __init__.py  axisurf.py  fourier.py  torosurf.py
Code/Source_Codes/moose/python/moose/grids/: __init__.py  _axes.py  _grid.py  _mesh.py  _parametric.py  block_structured.py  cgrid.py  mesh1d.py  qmesh.py  r3grid.py  rmesh.py  rmesh3d.py  tmesh.py  tpzmesh.py  tpzmesh3d.py  ugrid2d.py  uqmesh.py
Code/Source_Codes/moose/python/moose/tools/: __init__.py  plot.py
Code/Test/: 1_HSX_magnetictop_Pm.py  1st_inner_boundary0.txt  2_HSX_magneticmesh.py  2nd_inner_boundary0.txt  3_HSX_magnetictop_Lc.py  4_HSX_divertorload.py  5_HSX_plot.py  HSX_fieldline_connectionlength_0.05.py  HSX_fieldline_connectionlength_0.10.py  (+10 more)
(+100 files in other folders)
